--- a/popup.html
+++ b/popup.html
@@ -18,7 +18,7 @@
       <th style="width:50%">Key</th>
     </tr>
     <tr>
-      <td>Seek backward <span style="font-style: italic;"></span>(-5s)</td>
+      <td>Seek backward <span style="font-style: italic;">(-5s)</span></td>
       <td>
         <div class="keybind-wrapper">
           <span id="Seek Backward-span" class="keybind-span">J</span>
