add link to github website

--- a/popup.html
+++ b/popup.html
@@ -107,7 +107,8 @@
     </tr>
   </table>
   <div class="footer">Reload the page for changes to take effect.</div>
-  <div class="reset-btn-wrapper"><span class="reset-btn">Reset keybinds</span></div>
+  <div class="btn-wrapper"><span class="btn">Reset keybinds</span><a href="https://github.com/ynshung/better-yt-shorts" target="_blank"><span class="btn">GitHub Website</span></a></div>
+  <div class="btn-wrapper"></div>
 
   <!-- Modal -->
   <div id="edit-modal" class="modal">
