--- a/popup.html
+++ b/popup.html
@@ -106,22 +106,22 @@
       </td>
     </tr>
     <tr>
-      <td>Frame Backward<br><span style="font-style: italic;">(while paused)</span></td>
+      <td>Next Frame<br><span style="font-style: italic;">(while paused)</span></td>
       <td>
         <div class="keybind-wrapper">
-          <span id="Frame Backward-span" class="keybind-span">,</span>
-          <div id="Frame Backward" class="edit-btn">
+          <span id="Next Frame-span" class="keybind-span">,</span>
+          <div id="Next Frame" class="edit-btn">
             <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="16px" height="16px"><g id="pencil-svg" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M21.707,5.565,18.435,2.293a1,1,0,0,0-1.414,0L3.93,15.384a.991.991,0,0,0-.242.39l-1.636,4.91A1,1,0,0,0,3,22a.987.987,0,0,0,.316-.052l4.91-1.636a.991.991,0,0,0,.39-.242L21.707,6.979A1,1,0,0,0,21.707,5.565ZM7.369,18.489l-2.788.93.93-2.788,8.943-8.944,1.859,1.859ZM17.728,8.132l-1.86-1.86,1.86-1.858,1.858,1.858Z"></path></g></svg>
           </div>
         </div>
       </td>
     </tr>
     <tr>
-      <td>Frame Forward<br><span style="font-style: italic;">(while paused)</span></td>
+      <td>Previous Frame<br><span style="font-style: italic;">(while paused)</span></td>
       <td>
         <div class="keybind-wrapper">
-          <span id="Frame Forward-span" class="keybind-span">.</span>
-          <div id="Frame Forward" class="edit-btn">
+          <span id="Previous Frame-span" class="keybind-span">.</span>
+          <div id="Previous Frame" class="edit-btn">
             <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="16px" height="16px"><g id="pencil-svg" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M21.707,5.565,18.435,2.293a1,1,0,0,0-1.414,0L3.93,15.384a.991.991,0,0,0-.242.39l-1.636,4.91A1,1,0,0,0,3,22a.987.987,0,0,0,.316-.052l4.91-1.636a.991.991,0,0,0,.39-.242L21.707,6.979A1,1,0,0,0,21.707,5.565ZM7.369,18.489l-2.788.93.93-2.788,8.943-8.944,1.859,1.859ZM17.728,8.132l-1.86-1.86,1.86-1.858,1.858,1.858Z"></path></g></svg>
           </div>
         </div>
