--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <link href="popup.css" rel="stylesheet" type="text/css" />
 <script type="module" src="popup.js"></script>
 
-<div class="container">
+<div class="container" data-theme="light">
   <div class="title-container">
     <div>
       <div class="title">Better Youtube Shorts</div>
@@ -12,7 +12,7 @@
   <div class="separation-line" style="margin-top:5px;opacity:0.9"></div>
 
   <h3 class="prevent-selection" style="text-align: center;margin:5px 0px;">Keybinds</h3>
-  <table style="width:100%;border-collapse: collapse;">
+  <table style="width:100%;" data-theme="light">
     <tr class="prevent-selection">
       <th>Command</th>
       <th>Key</th>
