--- a/popup.html
+++ b/popup.html
@@ -228,6 +228,48 @@
         </div>
       </td>
     </tr>
+    <tr>
+      <td>Like<br><span style="font-style: italic;">(set reaction)</span></td>
+      <td>
+        <div class="keybind-wrapper">
+          <span id="Reaction Like-span" class="keybind-span">z</span>
+        </div>
+      </td>
+      <td>
+        <div id="Reaction Like" class="edit-btn">
+          <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="16px" height="16px">
+            <g id="pencil-svg" stroke-width="0"></g>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+            <g id="SVGRepo_iconCarrier">
+              <path
+                      d="M21.707,5.565,18.435,2.293a1,1,0,0,0-1.414,0L3.93,15.384a.991.991,0,0,0-.242.39l-1.636,4.91A1,1,0,0,0,3,22a.987.987,0,0,0,.316-.052l4.91-1.636a.991.991,0,0,0,.39-.242L21.707,6.979A1,1,0,0,0,21.707,5.565ZM7.369,18.489l-2.788.93.93-2.788,8.943-8.944,1.859,1.859ZM17.728,8.132l-1.86-1.86,1.86-1.858,1.858,1.858Z">
+              </path>
+            </g>
+          </svg>
+        </div>
+      </td>
+    </tr>
+    <tr>
+        <td>Dislike<br><span style="font-style: italic;">(set reaction)</span></td>
+        <td>
+            <div class="keybind-wrapper">
+                <span id="Reaction Dislike-span" class="keybind-span">x</span>
+            </div>
+        </td>
+        <td>
+            <div id="Reaction Dislike" class="edit-btn">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="16px" height="16px">
+                    <g id="pencil-svg" stroke-width="0"></g>
+                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                    <g id="SVGRepo_iconCarrier">
+                        <path
+                                d="M21.707,5.565,18.435,2.293a1,1,0,0,0-1.414,0L3.93,15.384a.991.991,0,0,0-.242.39l-1.636,4.91A1,1,0,0,0,3,22a.987.987,0,0,0,.316-.052l4.91-1.636a.991.991,0,0,0,.39-.242L21.707,6.979A1,1,0,0,0,21.707,5.565ZM7.369,18.489l-2.788.93.93-2.788,8.943-8.944,1.859,1.859ZM17.728,8.132l-1.86-1.86,1.86-1.858,1.858,1.858Z">
+                        </path>
+                    </g>
+                </svg>
+            </div>
+        </td>
+    </tr>
   </table>
   <div class="footer prevent-selection">Reload the page for changes to take effect.</div>
   <div class="btn-wrapper"><span class="btn reset-btn">Reset keybinds</span><a href="https://github.com/ynshung/better-yt-shorts" target="_blank"><span class="btn">GitHub</span></a></div>
