updated form visuals

--- a/popup.html
+++ b/popup.html
@@ -232,11 +232,11 @@
   <h3 class="prevent-selection" style="text-align: center;margin:5px 0px;">Extra Options</h3>
   <div id="extra_options">
     <div class="extra_options--row">
-      <label for="skip-bad-shorts">Automatically Skip Shorts with Low Likes?</label>
+      <label for="skip-bad-shorts">Automatically Skip Shorts with fewer likes?</label>
       <input type="checkbox" id="extra_options_skip_enabled" name="skip-bad-shorts">
     </div>
     <div class="extra_options--row">
-      <label for="skip-bad-shorts">Skip shorts with fewer than this many likes:</label>
+      <label for="skip-bad-shorts">Skip shorts with fewer than this many likes</label>
       <input type="number" id="extra_options_skip_threshold" name="skip-bad-shorts-threshold" min=0>
     </div>
   </div>
