--- a/popup.html
+++ b/popup.html
@@ -24,6 +24,10 @@
       <label for="skip-bad-shorts">Skip shorts with fewer than this many likes:</label>
       <input type="number" id="extra_options_skip_threshold" name="skip-bad-shorts-threshold" min=0>
     </div>
+    <div class="extra_options--row">
+      <label for="auto-open-comments">Automatically open comments on new shorts?</label>
+      <input type="checkbox" id="extra_options_auto_open_comments" name="auto-open-comments">
+    </div>
   </div>
 
   <div class="footer prevent-selection">Reload the page for changes to take effect.</div>
