--- a/popup.html
+++ b/popup.html
@@ -22,7 +22,7 @@
     </div>
     <div class="extra_options--row">
       <label for="skip-bad-shorts">Skip shorts with fewer than this many likes:</label>
-      <input type="number" id="extra_options_skip_threshold" name="skip-bad-shorts-threshold" min=0>
+      <input type="number" id="extra_options_skip_threshold" name="skip-bad-shorts-threshold" min=0 value=500>
     </div>
     <div class="extra_options--row">
       <label for="auto-open-comments">Automatically open comments on new shorts?</label>
@@ -30,7 +30,7 @@
     </div>
     <div class="extra_options--row">
       <label for="seek-amount">How many seconds to seek?</label>
-      <input type="number" id="extra_options_seek_amount" name="seek-amount" min=1 max=60>
+      <input type="number" id="extra_options_seek_amount" name="seek-amount" min=1 max=60 value=5>
     </div>
   </div>
 
