v3 notice on extension

--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,11 @@
 <link href="popup.css" rel="stylesheet" type="text/css" />
 <script type="module" src="popup.js"></script>
 
+<div id="announcement" data-no="1">
+  <a href="https://github.com/ynshung/better-yt-shorts#-help-us-test-version-3" target="_blank">Help us test out Version 3!</a>
+  <!-- X cancel button -->
+  <a href="#" id="close-btn" title="Dismiss">&times;</a>
+</div>
 <div class="container" data-theme="light">
   <div class="title-container">
     <div>
